SONAR-15827 Fix SSF-219